@@ -20,7 +20,7 @@ sub setup
 {
         my $c = shift;
         $c->unregister_command("help");
-        $c->register_commands("help", "search", "add", "createdb", "listnames", "listkeys", "processqueue", "gc", "init");
+        $c->register_commands("help", "search", "add", "createdb", "listnames", "listkeys", "stats", "processqueue", "gc", "init");
 }
 
 sub teardown
@@ -48,7 +48,7 @@ sub help
     [-p|--pattern <PATTERN>]
     [--id <VALUE_ID>]
     [--really <DSN>]
-    [init|search|add|createdb|listnames|listkeys|processqueue|gc]
+    [init|search|add|createdb|listnames|listkeys|stats|processqueue|gc]
     <DATAFILE>
 
   Sub commands:
@@ -64,6 +64,8 @@ sub help
     listnames       - List existing metric names.
 
     listkeys        - List existing additional key names.
+
+    stats           - Show counts of data points, metrics, keys, etc.
 
     processqueue    - Works on the result queue created by add --queuemode.
 
@@ -238,6 +240,14 @@ sub listkeys :Help(list existing additional key names)
         _listkeys($c);
 }
 
+sub stats :Help(show backend storage usage counts)
+{
+        my ($c) = @_;
+
+        _getopt($c);
+        _stats($c);
+}
+
 sub processqueue :Help(Works on the result queue created by add --queuemode)
 {
         my ($c) = @_;
@@ -340,6 +350,14 @@ sub _listkeys
         my ($c) = @_;
 
         my $result = $c->{_balib}->listkeys ($c->options->{pattern});
+        _write_out($c, $result);
+}
+
+sub _stats
+{
+        my ($c) = @_;
+
+        my $result = $c->{_balib}->stats;
         _write_out($c, $result);
 }
 
