@@ -10,4 +10,4 @@ repository = git://github.com/benchmarkanything/BenchmarkAnything-Storage-Fronte
 repository_web = http://github.com/benchmarkanything/BenchmarkAnything-Storage-Frontend-Tools
 
 [Prereqs]
-BenchmarkAnything::Storage::Frontend::Lib = 0.015
+BenchmarkAnything::Storage::Frontend::Lib = 0.016
