@@ -206,5 +206,18 @@ unlike($output_flat, qr/^4/ms,                               "expected multi lin
 # diag "\n";
 # diag $output_flat;
 
+diag "\n========== Stats ==========";
+
+# Create and fill test DB
+command "$program createdb --really $dsn";
+command "$program add      t/valid-benchmark-anything-data-02.json";
+
+# full data point
+$output_json = command "$program stats";
+$output      = JSON::decode_json($output_json);
+is($output->{count_datapoints}, 8, "stats - count data points");
+is($output->{count_metrics},    5, "stats - count metrics");
+is($output->{count_keys},       3, "stats - count keys");
+
 # Finish
 done_testing;
